fix layout bug

--- a/assets/styles/_reset.scss
+++ b/assets/styles/_reset.scss
@@ -129,7 +129,10 @@ sup {
   [name='BlockImage'] {
     padding-left: 0;
     padding-right: 0;
-    width: 100%;
+
+    .wrapper {
+      width: 100%;
+    }
   }
 }
 
